--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tic-Tac-Toe</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" type="image/x-icon" href="1000_F_474143697_bxPq5cmZ4neeR9SrB5J5WpSn8Wanid8c.jpg">
 </head>
 <body>
     <div class="container">
